# aoc2024

./: CMakeLists.txt  common.h  compile.sh
day01/: CMakeLists.txt  day01_part1.cpp  day01_part2.cpp
day02/: CMakeLists.txt  day02_part1.cpp  day02_part2.cpp
day03/: CMakeLists.txt  day03_part1.cpp  day03_part2.cpp
day04/: CMakeLists.txt  day04_part1.cpp  day04_part2.cpp
day05/: CMakeLists.txt  day05_part1.cpp  day05_part2.cpp
day06/: CMakeLists.txt  day06_part1.cpp  day06_part2.cpp
day07/: CMakeLists.txt  day07_part1.cpp  day07_part2.cpp
day08/: CMakeLists.txt  day08_part1.cpp  day08_part2.cpp
day09/: CMakeLists.txt  day09_part1.cpp  day09_part2.cpp
day10/: CMakeLists.txt  day10_part1.cpp  day10_part2.cpp
day11/: CMakeLists.txt  day11_part1.cpp  day11_part2.cpp
day12/: CMakeLists.txt  day12_part1.cpp  day12_part2.cpp
day13/: CMakeLists.txt  day13_part1.cpp  day13_part2.cpp
day14/: CMakeLists.txt  day14_part1.cpp  day14_part2.cpp
day15/: CMakeLists.txt  day15_part1.cpp
